--- a/proto/index.html
+++ b/proto/index.html
@@ -243,7 +243,7 @@
 			<div class="col"></div>
 			<div class="col-10 font-ng font-4v">
 				<p>김병수·김정숙 <span class="font-2hv">장남</span> 김민석</p>
-				<p>XXX·XXX<span class="font-2hv">장녀</span> 정은미</p>
+				<p>정인수·강영준<span class="font-2hv">장녀</span> 정은미</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
 			</div>
@@ -275,18 +275,18 @@
 					<div class="col" style="padding: 0px;">
 						<p class="font-ng color-blue bold">신랑측</p>
 						<p class="margin-minus">&nbsp;</p>
-						<p><span class="font-3v color-gray">신랑</span> <a href="tel:01012345678">김민석 <i class="fas fa-phone-square"></i></a></p>
-						<p><span class="font-3v color-gray">아버지</span> <a href="tel:01012345678">김병수 <i class="fas fa-phone-square"></i></a></p>
-						<p><span class="font-3v color-gray">어머니</span> <a href="tel:01012345678">김정숙 <i class="fas fa-phone-square"></i></a></p>
+						<p><span class="font-3v color-gray">신랑</span> <a href="tel:01043853436">김민석 <i class="fas fa-phone-square"></i></a></p>
+						<p><span class="font-3v color-gray">아버지</span> <a href="tel:01090175735">김병수 <i class="fas fa-phone-square"></i></a></p>
+						<p><span class="font-3v color-gray">어머니</span> <a href="tel:01047543365">김정숙 <i class="fas fa-phone-square"></i></a></p>
 						<p class="margin-minus">&nbsp;</p>
 						<p class="margin-minus">&nbsp;</p>
 					</div>
 					<div class="col" style="padding: 0px;">
 						<p class="font-ng color-pink bold">신부측</p>
 						<p class="margin-minus">&nbsp;</p>
-						<p><span class="font-3v color-gray">신부</span> <a href="tel:01012345678">정은미 <i class="fas fa-phone-square"></i></a></p>
-						<p><span class="font-3v color-gray">아버지</span> <a href="tel:01012345678">XXX <i class="fas fa-phone-square"></i></a></p>
-						<p><span class="font-3v color-gray">어머니</span> <a href="tel:01012345678">XXX <i class="fas fa-phone-square"></i></a></p>
+						<p><span class="font-3v color-gray">신부</span> <a href="tel:01045470641">정은미 <i class="fas fa-phone-square"></i></a></p>
+						<p><span class="font-3v color-gray">아버지</span> <a href="tel:01037860641">정인수 <i class="fas fa-phone-square"></i></a></p>
+						<p><span class="font-3v color-gray">어머니</span> <a href="tel:01042340641">강영준 <i class="fas fa-phone-square"></i></a></p>
 					</div>
 				</div>
 				
