--- a/proto/index.html
+++ b/proto/index.html
@@ -234,7 +234,7 @@
 				<p>결혼식을 올리고자</p>
 				<p>초대하지 못한 점 너무 죄송합니다.</p>
 				<p class="margin-minus">&nbsp;</p>
-				<p>결혼식 후에 개별적으로 찾아뵙도록 하겠습니다.</p>
+				<p>행복하게 잘 살겠습니다.</p>
 				<p class="margin-minus">&nbsp;</p>
 			</div>
 			<div class="col"></div>
@@ -243,7 +243,9 @@
 			<div class="col"></div>
 			<div class="col-10 font-ng font-4v">
 				<p>김병수·김정숙 <span class="font-2hv">장남</span> 김민석</p>
+				<p>국민은행 086601-04-009417 예금주: 김민석</p>
 				<p>정인수·강영준<span class="font-2hv">장녀</span> 정은미</p>
+				<p>국민은행 086601-04-009417 예금주: 김민석</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
 			</div>
