--- a/proto/index.html
+++ b/proto/index.html
@@ -242,10 +242,23 @@
 		<div class="row color-black" style="background-color: floralwhite">
 			<div class="col"></div>
 			<div class="col-10 font-ng font-4v">
-				<p>김병수·김정숙 <span class="font-2hv">장남</span> 김민석</p>
-				<p>국민은행 086601-04-009417 예금주: 김민석</p>
-				<p>정인수·강영준 <span class="font-2hv">장녀</span> 정은미</p>
-				<p>국민은행 086601-04-009417 예금주: 김민석</p>
+				<p>김병수·김정숙 <span class="font-2hv">장남</span> 김민석</p>				
+				<p>정인수·강영준 <span class="font-2hv">장녀</span> 정은미</p>				
+				<p class="margin-minus">&nbsp;</p>
+				<p class="margin-minus">&nbsp;</p>
+			</div>
+			<div class="col"></div>
+		</div>
+	</div>
+	<!-- account -->
+	<div class="container-fluid">
+		<div class="row color-black" style="background-color: #ffdee7bf">
+			<div class="col"></div>
+			<div class="col-10 font-ng font-4v">				
+				<p><b>♡마음을 담은 축의금♡</b></p>
+				<p>신랑&신부에게 축의금을 전달하고 싶으신가요?</p>
+				<p style="font-size: 14px;">- 신랑측 : 국민은행 086601-04-009417 예금주: 김민석</p>
+				<p style="font-size: 14px;">- 신부측 : 국민은행 086601-04-009417 예금주: 김민석</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
 			</div>
