--- a/proto/index.html
+++ b/proto/index.html
@@ -254,11 +254,13 @@
 	<div class="container-fluid">
 		<div class="row color-black" style="background-color: #ffdee7bf">
 			<div class="col"></div>
-			<div class="col-10 font-ng font-4v">				
+			<div class="col-10 font-ng font-4v" style="margin-top: 30px;">				
 				<p><b>♡마음을 담은 축의금♡</b></p>
 				<p>신랑&신부에게 축의금을 전달하고 싶으신가요?</p>
-				<p style="font-size: 14px;">- 신랑측 : 국민은행 086601-04-009417 예금주: 김민석</p>
-				<p style="font-size: 14px;">- 신부측 : 국민은행 086601-04-009417 예금주: 김민석</p>
+				<p>- 신랑측 -</p>
+				<p>국민은행 086601-04-009417 예금주: 김민석</p><br />
+				<p>- 신부측 -</p>
+				<p>국민은행 086601-04-009417 예금주: 김민석</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
 			</div>
