--- a/proto/index.html
+++ b/proto/index.html
@@ -191,8 +191,7 @@
 		<div class="row">
 			<div class="col"></div>
 			<div class="col-10 font-ng font-4v text-right">
-				<p class="bold">2021년 5월 2일 일요일 오전 11시</p>
-				<p>경기 성남시 분당구 벌장투리로 12</p>
+				<p class="bold">2021년 5월 2일 일요일 오전 11시</p>				
 				<p>오키나라샷츠</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
@@ -256,10 +255,10 @@
 			<div class="col"></div>
 			<div class="col-10 font-ng font-4v" style="margin-top: 30px;">				
 				<p><b>♡마음을 담은 축의금♡</b></p>
-				<p>신랑&신부에게 축의금을 전달하고 싶으신가요?</p>
-				<p>- 신랑측 -</p>
+				<p>신랑&신부에게 축의금을 전달하고 싶으신가요?</p><br />
+				<p class="font-ng color-blue bold">- 신랑측 -</p>
 				<p>국민은행 086601-04-009417 예금주: 김민석</p><br />
-				<p>- 신부측 -</p>
+				<p class="font-ng color-pink bold">- 신부측 -</p>
 				<p>국민은행 086601-04-009417 예금주: 김민석</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
