--- a/proto/index.html
+++ b/proto/index.html
@@ -251,15 +251,31 @@
 	</div>
 	<!-- account -->
 	<div class="container-fluid">
+		<div class="row" style="background-color: #F0F0F0">
+			<div class="col"></div>
+			<div class="col-10 font-gv text-right">
+				<div class="row">
+					<div class="col-9" style="padding: 0px;"></div>
+					<div class="col" style="padding: 0px;">
+						<p class="margin-minus">&nbsp;</p>
+						<p class="margin-minus">&nbsp;</p>
+						<p class="margin-minus">&nbsp;</p>
+						<p class="font-6v" style="letter-spacing: 0.25rem;">account</p>
+						<p class="margin-minus">&nbsp;</p>
+					</div>
+				</div>
+			</div>
+			<div class="col"></div>
+		</div>
 		<div class="row color-black" style="background-color: #ffdee7bf">
 			<div class="col"></div>
 			<div class="col-10 font-ng font-4v" style="margin-top: 30px;">				
 				<p><b>♡마음을 담은 축의금♡</b></p>
 				<p>신랑&신부에게 축의금을 전달하고 싶으신가요?</p><br />
-				<p class="font-ng color-blue bold">- 신랑측 -</p>
-				<p>국민은행 086601-04-009417 예금주: 김민석</p><br />
-				<p class="font-ng color-pink bold">- 신부측 -</p>
-				<p>국민은행 086601-04-009417 예금주: 김민석</p>
+				<p class="font-ng color-blue bold">신랑측</p>
+				<p>국민은행 086601-04-009417 , 예금주: 김민석</p><br />
+				<p class="font-ng color-pink bold">신부측</p>
+				<p>국민은행 086601-04-009417 , 예금주: 김민석</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
 			</div>
