--- a/proto/index.html
+++ b/proto/index.html
@@ -251,7 +251,7 @@
 	</div>
 	<!-- account -->
 	<div class="container-fluid">
-		<div class="row" style="background-color: #F0F0F0">
+		<div class="row" style="background-color: #ffdee7bf">
 			<div class="col"></div>
 			<div class="col-10 font-gv text-right">
 				<div class="row">
@@ -273,9 +273,9 @@
 				<p><b>♡마음을 담은 축의금♡</b></p>
 				<p>신랑&신부에게 축의금을 전달하고 싶으신가요?</p><br />
 				<p class="font-ng color-blue bold">신랑측</p>
-				<p>국민은행 086601-04-009417 , 예금주: 김민석</p><br />
+				<p>국민은행 086601-04-009417 예금주: 김민석</p><br />
 				<p class="font-ng color-pink bold">신부측</p>
-				<p>국민은행 086601-04-009417 , 예금주: 김민석</p>
+				<p>국민은행 086601-04-009417 예금주: 김민석</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
 			</div>
