--- a/proto/index.html
+++ b/proto/index.html
@@ -192,7 +192,7 @@
 			<div class="col"></div>
 			<div class="col-10 font-ng font-4v text-right">
 				<p class="bold">2021년 5월 2일 일요일 오전 11시</p>				
-				<p>오키나라샷츠</p>
+				<p>오키나라</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
 			</div>
@@ -275,7 +275,7 @@
 				<p class="font-ng color-blue bold">신랑측</p>
 				<p>국민은행 086601-04-009417 예금주: 김민석</p><br />
 				<p class="font-ng color-pink bold">신부측</p>
-				<p>국민은행 086601-04-009417 예금주: 김민석</p>
+				<p>국민은행 805-21-0192-017 예금주: 정인수</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
 			</div>
