--- a/proto/index.html
+++ b/proto/index.html
@@ -273,7 +273,7 @@
 				<p><b>♡마음을 담은 축의금♡</b></p>
 				<p>신랑&신부에게 축의금을 전달하고 싶으신가요?</p><br />
 				<p class="font-ng color-blue bold">신랑측</p>
-				<p>국민은행 086601-04-009417 예금주: 김민석</p><br />
+				<p>기업은행 239-023106-04-011 예금주: 김병수</p><br />
 				<p class="font-ng color-pink bold">신부측</p>
 				<p>국민은행 805-21-0192-017 예금주: 정인수</p>
 				<p class="margin-minus">&nbsp;</p>
