--- a/proto/index.html
+++ b/proto/index.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="../common/favicon.ico">
 	<meta property="og:title" content="김민석♡정은미 안내장">
 	<meta property="og:description" content="2021년 5월 2일 일요일 오전 11시">
-	<meta property="og:image" content="https://blackdeery.github.io/invite/proto/thumbnail.png">
+	<meta property="og:image" content="https://borine0514.github.io/invite/proto/thumbnail.png">
 	<meta property="msapplication-TileColor" content="#663333">
 	<meta property="msapplication-TileImage" content="https://blackdeery.github.io/invite/common/144con.png">
 	<link rel="apple-touch-icon-precomposed" href="../common/512con.png">
