--- a/proto/index.html
+++ b/proto/index.html
@@ -192,7 +192,7 @@
 			<div class="col"></div>
 			<div class="col-10 font-ng font-4v text-right">
 				<p class="bold">2021년 5월 2일 일요일 오전 11시</p>				
-				<p>오키나라</p>
+				<p>오키나라샷츠</p>
 				<p class="margin-minus">&nbsp;</p>
 				<p class="margin-minus">&nbsp;</p>
 			</div>
