--- a/proto/index.html
+++ b/proto/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:description" content="2021년 5월 2일 일요일 오전 11시">
 	<meta property="og:image" content="https://borine0514.github.io/invite/proto/thumbnail.png">
 	<meta property="msapplication-TileColor" content="#663333">
-	<meta property="msapplication-TileImage" content="https://blackdeery.github.io/invite/common/144con.png">
+	<meta property="msapplication-TileImage" content="https://borine0514.github.io/invite/common/144con.png">
 	<link rel="apple-touch-icon-precomposed" href="../common/512con.png">
 	
 	<!-- Latest compiled and minified CSS -->
